--- a/genered-spring-projects/spring-boot-works/pom.xml
+++ b/genered-spring-projects/spring-boot-works/pom.xml
@@ -29,6 +29,15 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
+
+
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -45,6 +54,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+
+		<!-- non Spring boot core dependencies -->
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+		<!-- <dependency> <groupId>com.fasterxml.jackson.dataformat</groupId> <artifactId>jackson-dataformat-xml</artifactId> 
+			<version>2.8.3</version> </dependency> -->
+
 	</dependencies>
 
 	<build>
