added after terraform

--- a/genered-spring-projects/spring-boot-works/src/main/resources/application.properties
+++ b/genered-spring-projects/spring-boot-works/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=mongodatabase
 
 
+logging.file.name=/Users/naveenkumar/Desktop/elk-logs/elk.log 
